--- a/src/quill-editor/quill-editor.css
+++ b/src/quill-editor/quill-editor.css
@@ -1,7 +1,5 @@
 .quill-editor{
   margin: 0 auto;
-  /*min-height: 250px;*/
-  margin-bottom: 60px;
   background: #fff;
   position: relative;
   box-sizing: border-box;
@@ -10,6 +8,27 @@
   min-height: 250px;
 }
 
+/*工具栏*/
+.quill-editor .ql-toolbar.ql-snow{
+  box-sizing: border-box;
+  height: 42px;
+}
+.quill-editor .ql-snow .ql-fill,
+.quill-editor .ql-snow .ql-stroke.ql-fill{
+  fill: #35495E;
+}
+.quill-editor .ql-snow .ql-stroke{
+  stroke: #35495E;
+}
+.quill-editor.quill-no-border .ql-toolbar.ql-snow,
+.quill-editor.quill-no-border .ql-container.ql-snow{
+  border: none;
+}
+.quill-editor .ql-toolbar.ql-snow{
+  background: #F5F5FA;
+}
+
+/*全屏*/
 .quill-editor.quill-full{
   width: 100%;
   height: 100%;
@@ -29,25 +48,36 @@
   background: #fff;
   min-height: 0;
 }
-.quill-editor.quill-full .ql-container .ql-editor{
-  padding: 12px 20%
+/* .quill-editor.quill-full .ql-container .ql-editor{
+ padding: 12px 20%;
 }
 .quill-editor.quill-full .ql-container .ql-editor.ql-blank::before{
   left: 20%;
 }
+*/
+@media (max-width: 992px) {
+  .quill-editor.quill-full .ql-container .ql-editor {
+    padding: 12px 15px;
+  }
+  .quill-editor.quill-full .ql-container .ql-editor.ql-blank::before{
+    left: 15px;
+  }
+}
 
+@media (min-width: 1200px) {
+  .quill-editor.quill-full .ql-container .ql-editor {
+    padding: 12px 20%;
+  }
+  .quill-editor.quill-full .ql-container .ql-editor.ql-blank::before{
+    left: 20%;
+  }
+}
 
-.quill-editor .ql-snow .ql-fill,
-.quill-editor .ql-snow .ql-stroke.ql-fill{
-  fill: #35495E;
-}
-.quill-editor .ql-snow .ql-stroke{
-  stroke: #35495E;
-}
-.quill-editor.quill-no-border .ql-toolbar.ql-snow,
-.quill-editor.quill-no-border .ql-container.ql-snow{
-  border: none;
-}
-.quill-editor .ql-toolbar.ql-snow{
-  background: #F5F5FA;
+@media (min-width: 1600px) {
+  .quill-editor.quill-full .ql-container .ql-editor {
+    padding: 12px 26%;
+  }
+  .quill-editor.quill-full .ql-container .ql-editor.ql-blank::before{
+    left: 26%;
+  }
 }
